fix spacing on publish page when user has no lbc

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -201,9 +201,7 @@
 .card__body {
   padding: var(--spacing-large);
   border-top: 1px solid var(--color-border);
-  &:not(.card__body--no-title) {
-    padding-top: 0;
-  }
+
   &.card__body--table {
     padding: 0;
     border-top: 1px solid var(--color-border);
